languages/bevy_mod_scripting_lua_derive/tests/fail/invalid-argument-type.stderr
error[E0308]: mismatched types
  --> tests/fail/invalid-argument-type.rs:8:21
   |
8  |     fn my_fn(&self, arg: String);
   |        -----        ^^^ expected `usize`, found `String`
   |        |
   |        arguments to this method are incorrect
   |
note: method defined here
  --> tests/fail/invalid-argument-type.rs:14:12
   |
14 |     pub fn my_fn(&self, _: usize) {}
   |            ^^^^^        --------
